<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
      <item
          android:id="@+id/menu_item_new_patient"
          android:icon="@drawable/ic_person_add_white"
          android:title="@string/menu_item_new_patient"
          app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/menu_item_sort"
        app:showAsAction="ifRoom"
        >
        <menu>
            <item
                android:id="@+id/menu_item_sort_by_last_name_asc"
                android:orderInCategory="200"
                android:title="@string/menu_item_sort_by_last_name"
                android:icon="@drawable/ic_sort_by_alpha_asc"
                android:visible="true"
                app:showAsAction="never"/>
            <item
                android:id="@+id/menu_item_sort_by_last_name_desc"
                android:orderInCategory="200"
                android:title="@string/menu_item_sort_by_last_name"
                android:icon="@drawable/ic_sort_by_alpha_desc"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/menu_item_sort_by_birthday_asc"
                android:orderInCategory="200"
                android:title="@string/menu_item_sort_by_birthday"
                android:icon="@drawable/ic_sort_by_number_asc"
                android:visible="true"
                app:showAsAction="never"/>
            <item
                android:id="@+id/menu_item_sort_by_birthday_desc"
                android:orderInCategory="200"
                android:title="@string/menu_item_sort_by_birthday"
                android:icon="@drawable/ic_sort_by_number_desc"
                android:visible="false"
                app:showAsAction="never"/>
            <item
                android:id="@+id/menu_item_sort_by_tags"
                android:orderInCategory="200"
                android:title="@string/menu_item_sort_by_tags"
                app:showAsAction="never"/>
            <item
                android:id="@+id/menu_item_sort_by_default"
                android:orderInCategory="200"
                android:title="@string/menu_item_sort_by_default"
                app:showAsAction="never"/>
        </menu>
    </item>
    <item
          android:id="@+id/menu_item_new_tag"
          android:orderInCategory="100"
          android:title="@string/menu_item_new_tag"
          app:showAsAction="never"/>
      <item
          android:id="@+id/menu_item_remove_tag"
          android:orderInCategory="100"
          android:title="@string/menu_item_remove_tag"
          app:showAsAction="never"/>
</menu>