<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/patient_review_full_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/patient_review_full_name_title"/>

        <TextView
            android:id="@+id/patient_review_age_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/patient_review_full_name_text_view"
            android:gravity="center"
            android:text="@string/patient_review_age_title"/>

        <EditText
            android:id="@+id/patient_review_history_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/patient_review_age_text_view"
            android:ems="10"
            android:inputType="textMultiLine|textCapSentences|textNoSuggestions"
            android:hint="@string/patient_history_hint"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/patient_image_gallery_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/patient_review_history_edit_text"
            android:scrollbars="horizontal"/>

        <TextView
            android:id="@+id/patient_review_receptions_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/patient_image_gallery_recycler_view"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/patient_review_receptions_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:theme="@style/AppTheme"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reception_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/patient_review_receptions_text_view"
            android:scrollbars="vertical"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/patient_review_add_main_image_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/patient_image_gallery_recycler_view"
            android:layout_below="@id/patient_review_history_edit_text"
            android:layout_margin="16dp"
            android:alpha="0.5"
            app:srcCompat="@drawable/ic_photo_add"
            app:backgroundTint="@color/colorPrimary"/>
    </RelativeLayout>
</ScrollView>